Fixed some more spacing, deleted unneccessary divs for now.

--- a/style.css
+++ b/style.css
@@ -61,9 +61,9 @@ nav ul li a:hover {
 
 .section {
     width: 90%;
-    margin: 20px auto;
+    margin: 60px auto;
     background-color: #F5F5F5;
-    padding: 20px;
+    padding: 15px;
     border-radius: 5px;
 }
 
@@ -102,29 +102,11 @@ nav ul li a:hover {
     padding: 20%;
 }
 
-.subtitle {
-    width: 15%;
-    margin: 20px auto;
-    background-color: #F5F5F5;
-    padding: 30px;
-    border-radius: 5px;
-}
-
-.subtitle h2 {
-    font-size: 24px;
-    color: #333;
-    text-align: center;
-    margin: 0;
-}
-
 #skills {
     width: 80%;
     background-color: #003366;
     color: #fff;
 }
-
-
-
 
 .skills-container {
     display: flex;
@@ -133,15 +115,22 @@ nav ul li a:hover {
 }
 
 .skill {
-    width: calc(33.33% - 10px); /* Adjust for spacing */
+    width: calc(33.33% - 10px); /* Adjust for spacing*/
     margin-bottom: 20px;
     text-align: center;
 }
 
 .skill-icon img {
-    width: 100%;
+    width: 90%;
     height: auto;
-    border-radius: 10px; /* Adjust as needed */
+    border-radius: 10px; /* Adjust as needed*/
+    padding: 20px;
+}
+
+.skill-icon {
+    height: 300px; /* Set a fixed height */
+    overflow: hidden; /* Hide any overflowing content */
+    border-radius: 10px; /* Adjustable for space */
 }
 
 .skill-name {
